# lj-scraper

./: .gitignore  README.md  lj_scraper.py  lj_scraper.spec  pyproject.toml
.github/workflows/: build.yml
src/: __init__.py  __main__.py  account_scraper.py  browser.py  cli.py  config.py  photo_scraper.py  utils.py
