[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lj_scrapers"
version = "1.0.0"
description = "A modular scraper for LiveJournal profiles, entries, comments, memories, and photo albums."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "PyMuPDF>=1.23.0",
    "rich>=13.0.0",
    "configargparse>=1.5.0"
]

[project.scripts]
lj-scraper = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lj_scrapers*"]
